--- a/templates/default.mustache
+++ b/templates/default.mustache
@@ -1,10 +1,10 @@
-<div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 800px; height: 456px; overflow: hidden; visibility: hidden; background-color: #24262e;">
+<div id="jssor_1" style="direction: ltr; position: relative; margin: 0 auto; top: 0px; left: 0px; width: {{ width }}px; height: {{ height_container }}px; overflow: hidden; visibility: hidden; background-color: #24262e;">
         <!-- Loading Screen -->
         <div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
             <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
             <div style="position:absolute;display:block;background:url('{{ img_path }}img/loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
         </div>
-        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 800px; height: 356px; overflow: hidden;">
+        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: {{ width }}px; height: {{ height }}px; overflow: hidden;">
             {{ slides }}
         </div>
         <!-- Thumbnail Navigator -->
